// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Submitting the form calls login function 1`] = `
<DocumentFragment>
  <div>
    <h3>
      Profile Update
    </h3>
    <form
      class="SignUpForm"
    >
      <label
        for="username"
      >
        Username
      </label>
      <p>
        testuser
      </p>
      <label
        for="firstName"
      >
        First Name
      </label>
      <input
        id="firstName"
        name="firstName"
        placeholder="First Name"
        value="user"
      />
      <label
        for="lastName"
      >
        Last Name
      </label>
      <input
        id="lastName"
        name="lastName"
        placeholder="Last Name"
        value="name"
      />
      <label
        for="email"
      >
        Email
      </label>
      <input
        id="email"
        name="email"
        placeholder="email"
        type="email"
        value="user@email.com"
      />
      <button>
        Save Changes
      </button>
    </form>
  </div>
</DocumentFragment>
`;

exports[`it renders and matches with snaphot 1`] = `
<DocumentFragment>
  <div>
    <h3>
      Profile Update
    </h3>
    <form
      class="SignUpForm"
    >
      <label
        for="username"
      >
        Username
      </label>
      <p>
        testuser
      </p>
      <label
        for="firstName"
      >
        First Name
      </label>
      <input
        id="firstName"
        name="firstName"
        placeholder="First Name"
        value=""
      />
      <label
        for="lastName"
      >
        Last Name
      </label>
      <input
        id="lastName"
        name="lastName"
        placeholder="Last Name"
        value=""
      />
      <label
        for="email"
      >
        Email
      </label>
      <input
        id="email"
        name="email"
        placeholder="email"
        type="email"
        value="test@test.net"
      />
      <button>
        Save Changes
      </button>
    </form>
  </div>
</DocumentFragment>
`;
